--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>CSE 135 HW1 Lives! TESTTESTTESTTEST</h1>
+  <h1>CSE 135 HW1 Lives!</h1>
   <script>
     document.write(`Live @ ${new Date()}`);
   </script>
