--- a/ilvvsion.dev/public_html/index.html
+++ b/ilvvsion.dev/public_html/index.html
@@ -22,7 +22,7 @@
     <div class="grid-item"></div>
     <div class="grid-item">
       <div>
-        <h1>Team</a></h1>
+        <h1>Team</h1>
         <h4>Members</h4>
         <ul>
           <li>
