--- a/ilvvsion.dev/public_html/index.html
+++ b/ilvvsion.dev/public_html/index.html
@@ -42,7 +42,7 @@
     <h2>Homework 1</h2>
     <ul>
       <li><a href="hello.php">PHP</a></li>
-      <li><a href="hello.php">Node</a></li>
+      <li><a href="hello.php">GoAccess Report</a></li>
     </ul>
   </section>
 </body>
