reworked 404 error page

--- a/ilvvsion.dev/public_html/404.html
+++ b/ilvvsion.dev/public_html/404.html
@@ -19,31 +19,12 @@
         document.write(`Live @ ${new Date()}`);
       </script>
     </div>
-    <div class="grid-item"></div>
-    <div class="grid-item">
-      <div>
-        <h1>Team</a></h1>
-        <h4>Members</h4>
-        <ul>
-          <li>
-            <a href="/members/ivan.html">Ivan Luu</a>
-          </li>
-          <li>
-            <a href="/members/jonathan.html">Jonathan Moon</a>
-          </li>
-          <li>
-            <a href="/members/kody.html">Kody Xu</a>
-          </li>
-        </ul>
-      </div>
-    </div>
   </section>
-  <section id="hmwk">
-    <h2>Homework 1</h2>
-    <ul>
-      <li><a href="hello.php">PHP</a></li>
-      <li><a href="hello.php">Node</a></li>
-    </ul>
+  <br><br><br>
+  <section id="error404">
+    <h2>Error 404</h2>
+    <p>Uh oh!  It seems that we may not have the page you are looking for.</p>
+    <a href="https://ilvvsion.dev/index.html">Click here to return to the Homepage.</a>
   </section>
 </body>
 
