test auto deploy

--- a/ilvvsion.dev/public_html/index.html
+++ b/ilvvsion.dev/public_html/index.html
@@ -41,8 +41,8 @@
   <section id="hmwk">
     <h2>Homework 1</h2>
     <ul>
-      <li><a href="hello.php">PHP</a></li>
-      <li><a href="hello.php">GoAccess Report</a></li>
+      <li><a href="hw1/hello.php">PHP</a></li>
+      <li><a href="hw1/report.html">GoAccess Report</a></li>
     </ul>
   </section>
 </body>
