--- a/ilvvsion.dev/public_html/404.html
+++ b/ilvvsion.dev/public_html/404.html
@@ -23,7 +23,7 @@
   <br><br><br>
   <section id="error404">
     <h2>Error 404</h2>
-    <p>Uh oh!  It seems that we may not have the page you are looking for.</p>
+    <p>Uh oh! Zoinks! It seems that we may not have the page you are looking for.</p>
     <a href="https://ilvvsion.dev/index.html">Click here to return to the Homepage.</a>
   </section>
 </body>
