--- a/ilvvsion.dev/public_html/index.html
+++ b/ilvvsion.dev/public_html/index.html
@@ -32,7 +32,7 @@
             <a href="/members/jonathan.html">Jonathan Moon</a>
           </li>
           <li>
-            <a href="/members/kody.html">Kody Xu the Great</a>
+            <a href="/members/kody.html">Kody Xu</a>
           </li>
         </ul>
       </div>
